--- a/index.html
+++ b/index.html
@@ -2,14 +2,15 @@
 <html lang="en-US">
   <head>
     <title>Jeopardy</title>
+    <link href="https://fonts.googleapis.com/css?family=Indie+Flower|Raleway" rel="stylesheet">
   </head>
   <body>
     <section class="splash--container popup--container">
-      <h1 class="splash--header">Welcome to Jeopardy</h1>
-      <h2 class="splash-prompt"></h2>
-      <input class="player--input1" type="text" placeholder="player1">
-      <input class="player--input2" type="text" placeholder="player2">
-      <input class="player--input3" type="text" placeholder="player3">
+      <h1 class="splash--header">This Is Jeopardy</h1>
+      <h2 class="splash-prompt">Please Enter Your Names</h2>
+      <input class="player--input1" type="text" placeholder="Player 1">
+      <input class="player--input2" type="text" placeholder="Player 2">
+      <input class="player--input3" type="text" placeholder="Player 3">
       <button class="start--btn">Start Game</button>
     </section>
     <div class="game--container game--inactive">
@@ -45,17 +46,17 @@
       <section class="player--container">
         <div>
           <img src="" alt="">
-          <h5 class="player--one">Name</h5>
+          <h5 class="player--one name">Name</h5>
           <h5 class="player--one--score">0</h5>
         </div>
         <div>
           <img src="" alt="">
-          <h5 class="player--two">Name</h5>
+          <h5 class="player--two name">Name</h5>
           <h5 class="player--two--score">0</h5>
         </div>
         <div>
           <img src="" alt="">
-          <h5 class="player--three">Name</h5>
+          <h5 class="player--three name">Name</h5>
           <h5 class="player--three--score">0</h5>
         </div>
       </section>
